--- a/views/denuncia.jade
+++ b/views/denuncia.jade
@@ -48,9 +48,10 @@ block script
 	// TinyMCE Editor
 	script(src="//cdn.tinymce.com/4/tinymce.min.js")
 	script.
+		//alert('!{denuncia.descripcion}');
 		var denuncia = {
 			titulo: '#{denuncia.titulo}',
-			descripcion: '#{denuncia.descripcion}',
+			descripcion: '!{denuncia.descripcion}',
 			gid: '#{denuncia.gid}',
 			fecha : '#{denuncia.fecha}',
 			id_usuario: '#{denuncia.id_usuario}',
@@ -71,16 +72,7 @@ block script
 		}
 
 		console.log(user);
-
-		$('#form_add_comentario').submit(function(){
-			//alert('click');
-			var xhr = new XMLHttpRequest();
-			xhr.open('POST','/app/denuncia/#{denuncia.gid}/addComentario' , true);
-			xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8"); // Especificamos cabecera
-			xhr.send(JSON.stringify({contenido: tinyMCE.activeEditor.getBody().textContent})); // Enviamos petición
-			//num_denuncias_io.emit('new_comentario_added', {denuncia: denuncia});
-			return false;
-		});
+		
 		var geojsonDenuncia = JSON.parse('!{JSON.stringify(denuncia.geometria)}'); // geometría del servidor
 		// solo podemos acceder a ella desde este tipo de scripts que tienen un punto al final
 		map.addControl(new app.InfoDenuncia({},denuncia));
