--- a/views/layout.jade
+++ b/views/layout.jade
@@ -124,14 +124,14 @@ html
     // Contenido
     // ================
     block content
-    #numdenun(style="position: absolute; bottom: 0.5em; right: 0.5em;border-radius: 4px; background: #00bbff; color: #fff;padding: 5px;")
-      i.fa.fa-bullhorn(style="margin-right: 5px;")
-      | #{locals.datos_app.num_denun_total}
-    #numdenunhoy(style="position: absolute; bottom: 2.875em; right: 0.5em;border-radius: 4px; background: #00bbff; color: #fff;padding: 5px;")
-      i.fa.fa-bullhorn(style="margin-right: 5px;")
-      | #{locals.datos_app.num_denun_hoy}
-    #numusu(style="position: absolute; bottom: 0.5em; left: 0.5em;border-radius: 4px; background: #00bbff; color: #fff;padding: 5px;")
-      i.fa.fa-user(style="margin-right: 5px;")
+    div(style="position: fixed; bottom: 0px; left: 0; right: 0; background : rgba(0,0,0,0.5); color: #fff; padding:2 20 2 20px")
+      i.fa.fa-bullhorn
+      |  HOY
+      span#numdenunhoy  !{locals.datos_app.num_denun_hoy}
+      |  | TOTAL
+      |  
+      span#numdenun  !{locals.datos_app.num_denun_total} 
+      span#numusu.pull-right
     script.
       var ip = '#{ip}';
       var id_usuario = '#{id_usuario}';
