--- a/views/nueva.jade
+++ b/views/nueva.jade
@@ -26,3 +26,5 @@ block script
 	script(type="text/javascript").
 		map.addControl(new app.Lateral({titulo: 'Añadir nueva denuncia'}));
 		map.addControl(new app.Draw());
+		var random = '#{random}';
+		alert(random);
