--- a/views/layout_sin_cabecera.jade
+++ b/views/layout_sin_cabecera.jade
@@ -121,7 +121,7 @@ html
     script.
       var ip = '#{locals.ip}';
       var id_usuario = '#{locals.id_usuario}';
-      alert(ip + " " + id_usuario);
+      //alert(ip + " " + id_usuario);
     // Plugins Javascript situados al final de la página, así el contenido carga antes
     // JQuery y Bootstrap
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js')
