--- a/views/denuncia.jade
+++ b/views/denuncia.jade
@@ -43,8 +43,6 @@ block panel-lateral
 				else
 					p Esta denuncia no contiene imágenes
 block script
-	script(src="/javascripts/share.js")
-	script(src="/javascripts/panel-lateral.js")
 	// TinyMCE Editor
 	script(src="//cdn.tinymce.com/4/tinymce.min.js")
 	script.
@@ -73,7 +71,38 @@ block script
 
 		console.log(user);
 		
-		var geojsonDenuncia = JSON.parse('!{JSON.stringify(denuncia.geometria)}'); // geometría del servidor
+		var json = JSON.parse('!{JSON.stringify(denuncia.geometria)}'); // geometría del servidor
+		var type = json.type;
+
+		var feature;
+
+		if(type == 'Point'){
+			feature = new ol.Feature({
+				  geometry: new ol.geom.Point(json.coordinates),
+				  name: 'Denuncia - Punto'
+			});
+		}
+		else if(type == 'LineString'){
+			feature = new ol.Feature({
+				geometry: new ol.geom.LineString(json.coordinates),
+				name: 'Denuncia - Polígono'
+			});
+		}
+		else if(type == 'Polygon'){
+			feature = new ol.Feature({
+				geometry: new ol.geom.Polygon(json.coordinates),
+				name: 'Denuncia - Polígono'
+			});
+		}
+
+		vector.getSource().addFeature(feature);
+
+		map.addLayer(vector);
+
+		var geom = feature.getGeometry().getExtent();
+		var size = map.getSize();
+
+		map.getView().fit(geom,size);
 		// solo podemos acceder a ella desde este tipo de scripts que tienen un punto al final
 		map.addControl(new app.InfoDenuncia({},denuncia));
 		map.addControl(new app.ImagenesDenuncia({},denuncia));
