--- a/views/layout.jade
+++ b/views/layout.jade
@@ -124,7 +124,7 @@ html
     // Contenido
     // ================
     block content
-    div(style="position: fixed; bottom: 0px; left: 0; right: 0; background : rgba(0,0,0,0.5); color: #fff; padding:2 20 2 20px")
+    div(style="position: fixed; z-index: 5; bottom: 0px; left: 0; right: 0; background : rgba(0,0,0,0.5); color: #fff; padding:2 20 2 20px")
       i.fa.fa-bullhorn
       |  HOY
       span#numdenunhoy  !{locals.datos_app.num_denun_hoy}
